# Rust-Web-Assembly

./: .gitignore  Cargo.toml  README.md  index.html  ngrok_recovery_codes.txt
GUI/: Cargo.toml  index.html
GUI/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
